[gd_scene load_steps=3 format=2]

[ext_resource path="res://Tiles_arts/objects/heart.png" type="Texture" id=1]
[ext_resource path="res://Scripts/SpecificScripts/UIPlayer.gd" type="Script" id=2]

[node name="Hearts" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Heart1" type="TextureRect" parent="."]
margin_left = 10.0
margin_top = 30.0
margin_right = 58.0
margin_bottom = 78.0
texture = ExtResource( 1 )

[node name="Heart2" type="TextureRect" parent="."]
margin_left = 58.0
margin_top = 30.0
margin_right = 106.0
margin_bottom = 78.0
texture = ExtResource( 1 )

[node name="Heart3" type="TextureRect" parent="."]
margin_left = 106.0
margin_top = 30.0
margin_right = 154.0
margin_bottom = 78.0
texture = ExtResource( 1 )
